<resources>
    <string name="app_name">BigClass-Teacher</string>
    <string name="login">LOG IN</string>
    <string name="regist">SIGN UP</string>
    <string name="forgetpass">忘记密码</string>
    <string name="submit">S U B M I T</string>
    <string name="ok">O K</string>
    <string name="resend">重发</string>
    <string name="verifycode">验证码</string>
    <string name="passwd">密码</string>
    <string name="confirm_passwd">密码确认</string>
    <string name="username">用户名</string>
    <string name="sex">性别</string>
    <string name="academy">学院</string>
    <string name="name">姓名</string>
    <string name="major">专业</string>
    <string name="classX">班级</string>
    <string name="email">邮箱</string>
    <string name="regist_tool">用户注册</string>
    <string name="next">下一步</string>
    <string name="sendverifycode">邮箱/用户名</string>
    <string name="forget_tool">找回密码</string>
    <string name="send">发送验证码</string>
    <string name="completepersonalinfo">完善个人信息</string>
    <string name="place">地点:</string>
    <string name="time">时间:</string>
    <string name="grade">绩点</string>
    <string name="studentnumber">参加人数</string>
    <string-array name="sex">
        <item>♂ 男生</item>
        <item>♀ 女生</item>
    </string-array>
    <string-array name="week">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
        <item>第21周</item>
        <item>第22周</item>
    </string-array>
    <string-array name="day">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周七</item>
    </string-array>

    <string-array name="num">
        <item>第1节</item>
        <item>第2节</item>
        <item>第3节</item>
        <item>第4节</item>
        <item>第5节</item>
        <item>第6节</item>
        <item>第7节</item>
        <item>第8节</item>
        <item>第9节</item>
        <item>第10节</item>
        <item>第11节</item>
    </string-array>

    <string-array name="place">
        <item>明德</item>
        <item>厚学</item>
        <item>沉毅</item>
        <item>笃行</item>
        <item>同和</item>
        <item>仁智</item>
        <item>浦江A</item>
        <item>浦江B</item>
        <item>浦江C</item>
        <item>计算机中心</item>
    </string-array>
</resources>
