<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/regist2"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/transprant"
        android:navigationIcon="@mipmap/nva_con"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@mipmap/nva_con"
        android:layout_marginTop="18dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/regist_tool"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        android:layout_marginRight="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.199"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/confirm_passwd"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="@+id/edit_passwd"
        app:layout_constraintRight_toRightOf="@+id/edit_passwd"
        app:layout_constraintTop_toBottomOf="@+id/edit_passwd"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edit_passwd"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passwd"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="@+id/edit_verifycode"
        app:layout_constraintRight_toRightOf="@+id/edit_verifycode"
        app:layout_constraintTop_toBottomOf="@+id/edit_verifycode"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/edit_verifycode"
        android:layout_width="292dp"
        android:layout_height="0dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/verifycode"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:theme="@style/MyEditText"
        app:layout_constraintLeft_toLeftOf="@+id/edit_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintRight_toRightOf="@+id/edit_email" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="309dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="91dp"
        android:background="@drawable/button_selector"
        android:text="@string/ok"
        android:textSize="50px"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:srcCompat="@drawable/logo"
        android:layout_marginStart="59dp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8540146"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btn_resend"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/transprant"
        android:text="@string/resend"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_verifycode"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/edit_verifycode"
        app:layout_constraintVertical_bias="0.619" />

</android.support.constraint.ConstraintLayout>
